--- a/package.json
+++ b/package.json
@@ -14,7 +14,19 @@
   "license": "ISC",
   "dependencies": {
     "@vitest/coverage-v8": "^1.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "mongoose": "^8.4.0",
+    "prettier": "^3.2.5",
+    "testcontainers": "^10.9.0",
+    "typescript": "^5.4.5",
     "unplugin-swc": "^1.4.5",
     "vitest": "^1.6.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0",
+    "typescript-eslint": "^7.11.0"
   }
 }
